--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,45 @@
-body {
+html {
     font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+
+body {
+    margin: 0;
+}
+
+.theme__container {
+    background: url(colors.gif); no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #1ED2E2;
+    padding: 50px;
+    color: #FFFFFF;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.theme__shiok {
+    font-size: 7.5em;
+    line-height: 88%;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 700;
+}
+
+.theme__tagline {
+    font-size: 1.4em;
+    margin-top: 20px;
+    line-height: 1em;
+    font-weight: 100;
+    font-style: italic;
+    letter-spacing: 2px;
 }
 
 .content {
     text-align: center;
-    margin: 50px 15px;
+    margin: 70px 15px;
 }
 
 .content__top {
@@ -12,35 +47,40 @@ body {
 }
 
 .header__container {
-    border-bottom: 1px solid #CCCCCC;
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-    padding-bottom: 20px;
-}
-
-.header__tw {    
-    font-weight: 300;
-    font-size: 35px;
-    letter-spacing: 5px;
+    padding-bottom: 50px;
 }
 
 .header__away-day {
-    font-weight: 800;
-    font-size: 58px;
-    margin: 15px 0;
+    font-weight: 700;
+    font-size: 3em;
     line-height: 100%;
+    margin-bottom: 15px;
+}
+
+.header__tw {    
+    font-size: 1.8em;
+    font-style: italic;
+    font-weight: 200;
+    letter-spacing: 3px;
+    line-height: 130%;
 }
 
 .details__container {
-    margin-bottom: 30px;
+    margin-bottom: 70px;
+    padding: 30px 0;
+}
+
+.container--with-border {
+    border-bottom: 1px solid #CFCFCF;
+    max-width: 540px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .details__text--bold {
-    font-size: 26px;
+    font-size: 1.5em;
     font-weight: 800;
-    line-height: 180%;
+    line-height: 150%;
 }
 
 .details__text--italic {
@@ -49,41 +89,59 @@ body {
     color: #BBBBBB;
 }
 
-.tagline__container {
-    font-size: 35px;
-    font-style: italic;
-    letter-spacing: 9px;
-    margin-bottom: 50px;
-}
-
-.tagline__image img {
-    max-width: 100%;
-    width: 800px;
-    margin-bottom: 50px;
-}
-
 .button {
-    padding: 15px 20px;
+    padding: 20px;
     line-height: 100%;
     text-align: center;
     text-decoration: none;
     color: #FFFFFF;
-    background-color: #0000CD;
-    margin-right: 20px;
-    border-radius: 3px;
-    letter-spacing: 3px;
-    font-size: 16px;
+    background-color: black;
+    letter-spacing: 1px;
+    font-size: 1em;
     display: inline-block;
-    margin-bottom: 20px;
+    font-weight: 200;
+    font-style: italic;
+    width: 130px;
+    margin-right: 10px;
 }
 
 .button.-last {
     margin-right: 0;
 }
 
-@media screen and (max-width: 640px) {
+/*Small screen styles*/
+
+@media screen and (max-width: 600px) {
+    html {
+        font-size: 12px;
+    }
+
+    .theme__container {
+        padding: 40px 20px;
+    }
+
+    .theme__shiok {
+        font-size: 6.5em;
+    }
+
+    .content {
+        margin: 60px 30px;
+    }
+
+    .header__container {
+        padding-bottom: 40px;
+    }
+
+    .details__container {
+        margin-bottom: 60px;
+        padding: 25px 0;
+    }
+
     .button {
-       display: block;
-       margin-right: 0;
+        padding: 15px;
+        display: block;
+        width: auto;
+        margin-right: 0;
+        margin-bottom: 10px;
     }
 }
