--- a/styles.css
+++ b/styles.css
@@ -10,21 +10,40 @@ body {
 }
 
 .theme__container {
-    background: url(colors.gif); no-repeat center center fixed; 
+/*    background: url(colors.gif); no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-color: #1ED2E2;
+    background-color: #1ED2E2;*/
     padding: 80px;
     color: #FFFFFF;
     text-align: center;
     text-transform: uppercase;
 }
 
+@-webkit-keyframes pulse {
+      0% {background-color: rgb(247, 143, 49);}
+     10% {background-color: rgb(181, 185, 53);}
+     20% {background-color: rgb(238, 49, 45);}
+     30% {background-color: rgb(38, 189, 207);}
+     40% {background-color: rgb(177, 28, 84);}
+     50% {background-color: rgb(128, 201, 210);}
+     60% {background-color: rgb(106, 37, 105);}
+     70% {background-color: rgb(17, 170, 88);}
+     80% {background-color: rgb(239, 91, 161);}
+     90% {background-color: rgb(137, 183, 127);}
+     100% {background-color: rgb(26, 115, 186);}
+}
+
+.color__pulsing {
+    -webkit-animation: pulse 3.5s infinite alternate;
+    background-color: rgb(247, 143, 49);
+}
+
 .theme__damn-shiok {
     font-size: 7.5em;
-    line-height: 88%;
+    line-height: 98%;
     margin-left: auto;
     margin-right: auto;
     font-weight: 800;
@@ -35,12 +54,12 @@ body {
 }
 
 .theme__tagline {
-    font-size: 1.5em;
-    margin-top: 25px;
+    font-size: 1.85em;
+    margin: 15px 0;
     line-height: 1em;
     font-weight: 100;
     font-style: italic;
-    letter-spacing: 2px;
+    letter-spacing: 6px;
 }
 
 .content {
@@ -128,6 +147,11 @@ body {
 
     .theme__shiok {
         font-size: 6.5em;
+    }
+
+    .theme__tagline {
+        font-size: 1.6em;
+        margin: 10px 0;
     }
 
     .content {
