--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,16 @@ body {
     margin-right: 0;
 }
 
+.photobook {
+  max-width: 80%;
+  margin: 50px auto 0;
+}
+
+.photobook h2 {
+  margin-top: 100px;
+  text-transform: uppercase;
+}
+
 .attendee-list {
   display: flex;
   flex-direction: row;
