--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,8 @@ body {
   width: 100%;
   height: 220px;
   object-fit: cover;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
 }
 
 .attendee-name {
